Moblle view cleanup and z-index fix

--- a/content/css/main.css
+++ b/content/css/main.css
@@ -1546,10 +1546,10 @@ span.nav-text { color: #425563; font-size: 1.2rem; line-height: 1.2rem; }
   h6, h5, h4 { padding-top: 2.5em; }
   /* line 25, ../../style/sass/components/_mobile.scss */
   #toc.toc2 { width: 19em; position: fixed; height: 100vh; z-index: 2; top: 0; border-bottom: 1px; border-right: 1px; overflow-x: hidden; transition: all 0.5s linear; }
-  /* line 37, ../../style/sass/components/_mobile.scss */
+  /* line 36, ../../style/sass/components/_mobile.scss */
   #toc.toc2.closed { margin-left: -19em; }
-  /* line 42, ../../style/sass/components/_mobile.scss */
-  #burger { display: block; padding: 0.5em; position: fixed; left: 0; font-size: 1.8em; border: none; color: #000; background-color: #fff; }
+  /* line 41, ../../style/sass/components/_mobile.scss */
+  #burger { display: block; padding: 0.5em; position: fixed; left: 0; font-size: 1.8em; border: none; color: #000; background-color: #fff; z-index: 1; }
   /* line 53, ../../style/sass/components/_mobile.scss */
   #minitoc { display: none; }
   /* line 57, ../../style/sass/components/_mobile.scss */
